fix overflow on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,7 +5,13 @@ html{
 
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
+
 body{
+  position: relative
     height: calc(100vh - 164px);
     font-family: 'Oswald', sans-serif;
     font-size: 16px;
@@ -477,6 +483,7 @@ color:#EFEFEF;
   width: 100%;
   height: 500px;
   margin: 0px 0px 0 0px;
+  border: ;
 }
 .bottle-section{
   position: absolute;
